--- a/draft.html
+++ b/draft.html
@@ -702,12 +702,100 @@
  
     <!-- Customer Reviews -->
 
+    <!-- Stay up to date with Chupi -->
+   <section class="bg-[#333333] text-[#e8e8e8] min-h-[400px] flex flex-col lg:flex-row items-center justify-center py-8 px-8 sm:px-16 font-poppins relative">
+  <div class="flex flex-col lg:flex-row justify-between items-center lg:items-start gap-8 max-w-6xl w-full mx-auto">
+      
+    <div class="w-full lg:w-1/2">
+      <h2 class="font-play font-semibold text-2xl mb-4 text-white">Stay up to date with Chupi</h2>
+      <p class="font-light text-base leading-relaxed text-white font-round">
+        By registering with Chupi Jewellery, you'll be the first to hear about new and limited edition collections, including one-of-a-kind pieces, exclusive offers and early-access releases.
+      </p>
+    </div>
+
+    <div class="w-full lg:w-1/2 max-w-lg">
+      <form action="#" method="post" class="space-y-4">
+        <div class="flex flex-col sm:flex-row gap-4">
+          <input type="text" class="w-full bg-transparent border text-white py-2 px-3 placeholder-white placeholder-opacity-80 text-sm focus:outline-none" placeholder="First Name" aria-label="First Name" required>
+          <input type="text" class="w-full bg-transparent border border-white text-white py-2 px-3 placeholder-white placeholder-opacity-80 text-sm focus:outline-none" placeholder="Last Name" aria-label="Last Name" required>
+        </div>
+        <div>
+          <input type="email" class="w-full bg-transparent border border-white text-white py-2 px-3 placeholder-white placeholder-opacity-80 text-sm focus:outline-none" placeholder="Please enter your email address" aria-label="Email Address" required>
+        </div>
+        <button type="submit" class="w-full bg-[#E7CEBB] hover:bg-[#F0DCD1] text-[#333333] font-semibold uppercase py-2 px-3 text-sm hover:bg-opacity-90 transition-colors duration-200">
+          KEEP ME UP TO DATE
+        </button>
+      </form>
+    </div>
+  </div>
+
+  <div class="absolute bottom-0 left-0 w-full bg-black py-4">
+    <p class="text-white text-xs text-center max-w-4xl mx-auto border-t border-white border-opacity-10 py-2">
+      We know how busy your inbox gets, so you can unsubscribe any time. By opting in, you are agreeing to our <a href="#" class="underline">privacy policy</a>.
+    </p>
+  </div>
+</section>
+    <!-- Stay up to date with Chupi -->
+
 </header>
 <!-- header end -->
  <!-- footer start -->
- <footer>
+ <footer class="footer p-10">
+     <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Customer Care</h6>
+   <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">
+  Chupi Customer Care
+</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]r">Payment Plans with humm</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Track My Order</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Shipping & Delivery</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Returns & Exchanges</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Resize & Alteration</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Services & Repairs</a>
+  </nav>
+  
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Contact</h6>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Email: care@chupi.com</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Store: 00 353 (0)1 598 4702</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Chupi on Instagram</a>
+  </nav>
 
- </footer>
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Our Company</h6>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">About Us</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Our Store</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Careers</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Sustainability</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Newsletter Signup</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Customer Reviews</a>
+  </nav>
+  
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Chupi Journal</h6>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Lydia Millen’s Crown of Hope <br> Journey</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Lab Grown Diamonds vs. Natural <br> Diamonds</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Designing a Chupi Claddagh Ring <br> for Nicola Coughlan</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Engagement Rings: How much <br> should I spend?</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Introducing the Never Forget <br> Engraved Signet Ring</a>
+  </nav>
+  
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Our Store</h6>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]er">Visit the Chupi Store in Dublin</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Book an Appointment</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]r">Call the store</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]r">Mon-Sat10:00 – 18:00</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Sun
+12:00 – 17:00</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Bank Holiday Mondays
+12:00 – 17:00</a>
+  </nav>
+  
+
+</footer>
+ <!-- footer end -->
+
  <!-- 2nd footer -->
 <section class="md:mt-16 mt-8">
   <div class="hero bg-[#F9F8F5] md:py-16 py-8">
