--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chupi Jewellery | Engagement Rings, Wedding Rings & Fine Jewellery</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/jpg" href="" />
+    <link rel="shortcut icon" type="image/jpg" href="img/chupi logo.png" />
     <!-- favicon -->
 
      <!-- google fonts -->
@@ -652,9 +652,63 @@
 </header>
 <!-- header end -->
 <!-- footer start -->
- <footer>
 
- </footer>
+<footer class="footer p-10">
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Customer Care</h6>
+   <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">
+  Chupi Customer Care
+</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]r">Payment Plans with humm</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Track My Order</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Shipping & Delivery</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Returns & Exchanges</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Resize & Alteration</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Services & Repairs</a>
+  </nav>
+  
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Contact</h6>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Email: care@chupi.com</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Store: 00 353 (0)1 598 4702</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Chupi on Instagram</a>
+  </nav>
+
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Our Company</h6>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">About Us</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Our Store</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Careers</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Sustainability</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Newsletter Signup</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Customer Reviews</a>
+  </nav>
+  
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Chupi Journal</h6>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Lydia Millen’s Crown of Hope <br> Journey</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Lab Grown Diamonds vs. Natural <br> Diamonds</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Designing a Chupi Claddagh Ring <br> for Nicola Coughlan</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Engagement Rings: How much <br> should I spend?</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Introducing the Never Forget <br> Engraved Signet Ring</a>
+  </nav>
+  
+  <nav>
+    <h6 class="md:text-2xl text-xl font-semibold font-play">Our Store</h6>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]er">Visit the Chupi Store in Dublin</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Book an Appointment</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]r">Call the store</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]r">Mon-Sat10:00 – 18:00</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Sun
+12:00 – 17:00</a>
+    <a class="relative text-sm text-black after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-0 after:h-[1.5px] after:bg-[#CDB487] after:transition-all after:duration-300 hover:after:w-full hover:after:h-[1px] hover:after:bg-[#E0C990]">Bank Holiday Mondays
+12:00 – 17:00</a>
+  </nav>
+  
+
+</footer>
+
+<!-- footer end -->
  <!-- 2nd footer -->
 <section class="md:mt-16 mt-8">
   <div class="hero bg-[#F9F8F5] md:py-16 py-8">
