added Stay up to date with Chupi

--- a/index.html
+++ b/index.html
@@ -647,7 +647,41 @@
         </section>
  
     <!-- Customer Reviews -->
+ 
+     <!-- Stay up to date with Chupi -->
+   <section class="bg-[#333333] text-[#e8e8e8] min-h-[400px] flex flex-col lg:flex-row items-center justify-center py-8 px-8 sm:px-16 font-poppins relative">
+  <div class="flex flex-col lg:flex-row justify-between items-center lg:items-start gap-8 max-w-6xl w-full mx-auto">
+      
+    <div class="w-full lg:w-1/2">
+      <h2 class="font-play font-semibold text-2xl mb-4 text-white">Stay up to date with Chupi</h2>
+      <p class="font-light text-base leading-relaxed text-white font-round">
+        By registering with Chupi Jewellery, you'll be the first to hear about new and limited edition collections, including one-of-a-kind pieces, exclusive offers and early-access releases.
+      </p>
+    </div>
 
+    <div class="w-full lg:w-1/2 max-w-lg">
+      <form action="#" method="post" class="space-y-4">
+        <div class="flex flex-col sm:flex-row gap-4">
+          <input type="text" class="w-full bg-transparent border text-white py-2 px-3 placeholder-white placeholder-opacity-80 text-sm focus:outline-none" placeholder="First Name" aria-label="First Name" required>
+          <input type="text" class="w-full bg-transparent border border-white text-white py-2 px-3 placeholder-white placeholder-opacity-80 text-sm focus:outline-none" placeholder="Last Name" aria-label="Last Name" required>
+        </div>
+        <div>
+          <input type="email" class="w-full bg-transparent border border-white text-white py-2 px-3 placeholder-white placeholder-opacity-80 text-sm focus:outline-none" placeholder="Please enter your email address" aria-label="Email Address" required>
+        </div>
+        <button type="submit" class="w-full bg-[#E7CEBB] hover:bg-[#F0DCD1] text-[#333333] font-semibold uppercase py-2 px-3 text-sm hover:bg-opacity-90 transition-colors duration-200">
+          KEEP ME UP TO DATE
+        </button>
+      </form>
+    </div>
+  </div>
+
+  <div class="absolute bottom-0 left-0 w-full bg-black py-4">
+    <p class="text-white text-xs text-center max-w-4xl mx-auto border-t border-white border-opacity-10 py-2">
+      We know how busy your inbox gets, so you can unsubscribe any time. By opting in, you are agreeing to our <a href="#" class="underline">privacy policy</a>.
+    </p>
+  </div>
+</section>
+    <!-- Stay up to date with Chupi -->
 
 </header>
 <!-- header end -->
