--- a/index.html
+++ b/index.html
@@ -647,7 +647,91 @@
         </section>
  
     <!-- Customer Reviews -->
- 
+ <!-- hover cards -->
+    <section class="bg-[#FDF6F4] md:py-16 py-8 lg:my-24 md:my-16 my-8">
+  <div class="flex flex-wrap justify-center gap-4">
+    <!-- card-1 -->
+    <div class="relative w-80 h-[450px] overflow-hidden shadow-lg group">
+      <img 
+        src="https://www.chupi.com/cdn/shop/files/Pic-1_Crop-1_Chupi-_2_1000x.jpg?v=1744794452" 
+        alt="Shoes" 
+        class="w-full h-full object-cover"
+      >
+      <div class="absolute bottom-6 left-6 z-10 transition-transform duration-500 group-hover:-translate-y-8">
+        <h2 class="md:text-3xl text-2xl font-bold text-white drop-shadow mb-2 font-play">About Chupi</h2>
+        <div class="relative">
+          <p class="text-white text-left font-round opacity-0 transform translate-y-2 group-hover:translate-y-0 group-hover:opacity-100 transition-all duration-500 mb-3">
+           At Chupi, we see jewellery as the autobiography of our lives. Every piece we create is designed to mark our most precious moments, milestones, and memories; to be worn 
+          </p>
+          <button class="relative overflow-hidden border border-white rounded-none font-thin px-6 py-2
+       before:absolute before:top-0 before:left-0 before:w-[200%] before:h-[200%] before:bg-white
+       before:-translate-x-full before:skew-x-12
+       before:transition-transform before:duration-500 before:ease-out
+       hover:before:translate-x-0
+       text-white hover:text-black">
+       <span class="relative z-10">READ MORE</span>
+      </button>
+        </div>
+      </div>
+      <div class="absolute inset-0 bg-[#3A3938]/80 translate-y-full group-hover:translate-y-0 transition-transform duration-500"></div>
+    </div>
+    <!-- card-2 -->
+    <div class="relative w-80 h-[450px] overflow-hidden shadow-lg group">
+      <img 
+        src="https://www.chupi.com/cdn/shop/files/Sustainability-LP-Block-01_1000x.jpg?v=1635945135" 
+        alt="Shoes" 
+        class="w-full h-full object-cover"
+      >
+      <div class="absolute bottom-6 left-6 z-10 transition-transform duration-500 group-hover:-translate-y-8">
+        <h2 class="md:text-3xl text-2xl font-bold text-white drop-shadow mb-2 font-play">
+Sustainability</h2>
+        <div class="relative">
+          <p class="text-white text-left font-round opacity-0 transform translate-y-2 group-hover:translate-y-0 group-hover:opacity-100 transition-all duration-500 mb-3">
+           Each precious Chupi piece is created with sustainability in mind. We work hard to source innovative, traceable and sustainable materials wherever possible in our supply chain.
+          </p>
+          <button class="relative overflow-hidden border border-white rounded-none font-thin px-6 py-2
+       before:absolute before:top-0 before:left-0 before:w-[200%] before:h-[200%] before:bg-white
+       before:-translate-x-full before:skew-x-12
+       before:transition-transform before:duration-500 before:ease-out
+       hover:before:translate-x-0
+       text-white hover:text-black">
+       <span class="relative z-10">READ MORE</span>
+      </button>
+        </div>
+      </div>
+      <div class="absolute inset-0 bg-[#3A3938]/80 translate-y-full group-hover:translate-y-0 transition-transform duration-500"></div>
+    </div>
+    <!-- card-3 -->
+    <div class="relative w-80 h-[450px] overflow-hidden shadow-lg group">
+      <img 
+        src="https://www.chupi.com/cdn/shop/files/home-about-store_june-2024_1000x_bdc8e35e-4b51-4adc-a9d5-d491decb8dba_1000x.jpg?v=1717575044" 
+        alt="Shoes" 
+        class="w-full h-full object-cover"
+      >
+      <div class="absolute bottom-6 left-6 z-10 transition-transform duration-500 group-hover:-translate-y-8">
+        <h2 class="md:text-3xl text-2xl font-bold text-white drop-shadow mb-2 font-play">Visit Us</h2>
+        <div class="relative">
+          <p class="text-white text-left font-round opacity-0 transform translate-y-2 group-hover:translate-y-0 group-hover:opacity-100 transition-all duration-500 mb-3">
+              Located in the heart of Dublin city, our beautiful flagship store is situated 
+              traceable and sustainable 
+              in the historic Powerscourt Townhouse, just off Grafton Street, Dublin.
+          </p>
+          <button class="relative overflow-hidden border border-white rounded-none font-thin px-6 py-2
+       before:absolute before:top-0 before:left-0 before:w-[200%] before:h-[200%] before:bg-white
+       before:-translate-x-full before:skew-x-12
+       before:transition-transform before:duration-500 before:ease-out
+       hover:before:translate-x-0
+       text-white hover:text-black">
+       <span class="relative z-10">READ MORE</span>
+      </button>
+        </div>
+      </div>
+      <div class="absolute inset-0 bg-[#3A3938]/80 translate-y-full group-hover:translate-y-0 transition-transform duration-500"></div>
+    </div>
+  </div>
+</section>
+
+    <!-- hover cards --> 
      <!-- Stay up to date with Chupi -->
    <section class="bg-[#333333] text-[#e8e8e8] min-h-[400px] flex flex-col lg:flex-row items-center justify-center py-8 px-8 sm:px-16 font-poppins relative">
   <div class="flex flex-col lg:flex-row justify-between items-center lg:items-start gap-8 max-w-6xl w-full mx-auto">
